[project]
name = "oidmcp"
version = "0.1.0"
description = "MCP server giving AI agents eyes on OpenImageDebugger buffers in live gdb/lldb sessions"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.scripts]
oid-mcp = "oidmcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oidmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
