[project]
name = "oid-mcp"
version = "0.3.1"
description = "MCP server giving AI agents eyes on OpenImageDebugger buffers in live gdb/lldb sessions"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.scripts]
oid-mcp = "oidmcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oidmcp"]

# The wire codec is single-sourced in the debugger-scripts tree
# (resources/oidscripts). An installed wheel has no sibling resources/
# checkout, so ship that tree inside the wheel as a top-level `oidscripts`
# package (oidmcp/_wireframe.py accepts it there). Wheel-only publishing:
# an sdist cannot reference ../oidscripts once unpacked, so the publish
# workflow builds and uploads the wheel only.
[tool.hatch.build.targets.wheel.force-include]
"../oidscripts" = "oidscripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
